--- a/templates/agg-togli.html
+++ b/templates/agg-togli.html
@@ -35,10 +35,12 @@
     <div style="width: 600px; margin-left: 450px; margin-top: 100px;">
 
         <h4 style="text-align: center;"> <i> Add, Edit, Delete animals from your Zoo</i></h4>
+
         <div style="margin-left: 260px; margin-bottom: 60px;"> <!--add-->
+          <form action="/new" method="POST">
         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal1">
             Add
-          </button>
+          </button></form>
           <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="button_add" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
@@ -47,7 +49,7 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <div class="input-group input-group-sm mb-3"> <!-- specei-->
+                  <div class="input-group input-group-sm mb-3"> <!-- speci-->
                       <span class="input-group-text" id="inputGroup-sizing-sm">Species</span>
                       <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
                     </div>
@@ -76,16 +78,24 @@
           </tr>
         </thead>
         <tbody>
+          {% for u in data %}
           <tr>
-            <th scope="row">{{ id }}</th>
-            <td>{{ specie }}</td>
-            <td>{{ zona }}</td>
-            <td>{{ Peso }}</td>
-            <td><button type="button" class="btn btn-danger">Delete</button></td> <!-- delete -->
+            <th scope="row">{{u.getId()}} </th>
+            <td>{{u.getArea()}} </td>
+            <td>{{u.getWeight()}} </td>
+            <td>{{u.getSpecies()}} </td>
             <td>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+              <form action="/delete" method="post">
+              <button type="button" class="btn btn-danger">Delete</button>
+              <input type="hidden" value="{{u.getID()}}" name="userId" />
+            <!-- delete --></form>
+            </td> 
+            <td>
+             <form action="/edit" method="get">
+              <input type="hidden" name="id" value="{{u.getID()}}" >
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                 Edit
-              </button>
+              </button></form> 
               <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="button_edit" aria-hidden="true">
                 <div class="modal-dialog">
                   <div class="modal-content">
@@ -116,13 +126,9 @@
                   </div>
                 </div>
 
-            
-            
-            
-            
             </td> <!-- delete -->
           </tr>
-    
+          {% endfor %}
         </tbody>
       </table>
 
