--- a/templates/lavoratori.html
+++ b/templates/lavoratori.html
@@ -24,7 +24,7 @@
                   <a class="nav-link" href="lavoratori.html">Working area</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About us</a>
+                  <a class="nav-link" href="about_us.html">About us</a>
                 </li>
             </ul>
           </div>
