--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -31,9 +31,10 @@
             </div>
           </nav>
     </div> <!--Fine Nav bar -->
-            <body>
+  
+    <div class="shadow-sm p-3 mb-5  rounded" style="background-color:beige; width: 800px; text-align: justify; color:#4C5F28; margin-left: 350px; margin-top: 100px;"><!-- inizio  testo-->
                 <header>
-                    <h1>About Our Zoo</h1>
+                    <h1 style="text-align: center;">About Our Zoo</h1>
                 </header>
                 <main>
                     <section>
@@ -92,7 +93,6 @@
             </body>
             </html>
         </p>
-        <h4 id="scrollspyHeading2">Second heading</h4>
         <p><body>
             <header>
                 <h1>About Safari Zoos</h1>
@@ -147,7 +147,7 @@
         </body></p>
         
       </div>
-</body>
+    </div><!--fine testo-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </html>
