--- a/templates/agg-togli.html
+++ b/templates/agg-togli.html
@@ -38,35 +38,8 @@
 
         <div style="margin-left: 260px; margin-bottom: 60px;"> <!--add-->
           <form action="/new" method="POST">
-        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal1">
-            Add
-          </button></form>
-          <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="button_add" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="button_add">Add a new Animal</h1>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                  <div class="input-group input-group-sm mb-3"> <!-- speci-->
-                      <span class="input-group-text" id="inputGroup-sizing-sm">Species</span>
-                      <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-                    </div>
-                  
-                    <div class="input-group input-group-sm mb-3"> <!--area-->
-                      <span class="input-group-text" id="inputGroup-sizing-sm">Area</span>
-                      <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-                    </div>
-
-                    <div class="input-group input-group-sm mb-3"> <!-- peso-->
-                      <span class="input-group-text" id="inputGroup-sizing-sm">Animal Weight</span>
-                      <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-                    </div>
-                    <form action="/animals" method="GET">
-                    <button type="button" class="btn btn-success">Add animal</button>
-                    </form>
-                </div></div></div></div> </div>
+            <a href="add.html"><button type="button" class="btn btn-success" href="add.html">Add animal</button></a>
+          </form>
 
     <table class="table">
         <thead>
@@ -94,44 +67,11 @@
             <td>
              <form action="/edit" method="get">
               <input type="hidden" name="id" value="{{u.getID()}}" >
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+              <a href="edit.html"><button type="button"  class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2" ù>
                 Edit
-              </button></form> 
-              <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="button_edit" aria-hidden="true">
-                <div class="modal-dialog">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h1 class="modal-title fs-5" id="button_edit">Edit the animal you choose</h1>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                      <form action="/save" method="post">
-                      <div class="input-group input-group-sm mb-3"> <!-- specoe-->
-                          <span class="input-group-text" id="inputGroup-sizing-sm">Species</span>
-                          <input type="text" value="{{user.getSpecies()}}" name="ASpecies" style="width: 100px;" />
-                        </div>
-                      
-                        <div class="input-group input-group-sm mb-3"> <!--area-->
-                          <span class="input-group-text" id="inputGroup-sizing-sm">Area</span>
-                          <input type="text" value="{{user.getArea()}}" name="A_Area" style="width: 100px;" />
-                        </div>
-
-                        <div class="input-group input-group-sm mb-3"> <!-- peso-->
-                          <span class="input-group-text" id="inputGroup-sizing-sm">Animal Weight</span>
-                          <input type="text" value="{{user.getWeight()}}" name="AWeight" style="width: 100px;" />
-                        </div>
-                      </form>
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                      
-                      <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Save</button>
-                    
-                    </div>
-                  </div>
-                </div>
-
-            </td> <!-- delete -->
+              </button></a>
+            </form> 
+            </td> <!-- edit -->
           </tr>
           {% endfor %}
         </tbody>
