creazione folder static e sistemazione py

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="../img/zoo.png" alt="Logo" height="50" class="d-inline-block align-text-top">
+                    <img src="../static/zoo.png" alt="Logo" height="50" class="d-inline-block align-text-top">
                   </a>
               <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
                 <ul class="navbar-nav">
@@ -36,42 +36,42 @@
 
 <!-- prova livelli immagine
     <div id="Layer1" style="position:absolute; left:10px;  z-index:1">
-      <img src="../img/mappa zoo/mappa.png" style="width: 800px; margin-left: 350px;">
+      <img src="../static/mappa zoo/mappa.png" style="width: 800px; margin-left: 350px;">
     </div> -->
     <!--foto 1, africa -->
     <div id="Layer2" style="position:absolute; left:10px; z-index:2">
       <a  href="lavoratori.html" >
-        <img src="../img/mappa zoo/africa.png "  style="width: 380px; margin-left: 735px; margin-top: 200px;">
+        <img src="../static/mappa zoo/africa.png "  style="width: 380px; margin-left: 735px; margin-top: 200px;">
       </a>
     </div>
     <!--foto2, asian -->
     <div id="Layer2" style="position:absolute; left:10px; z-index:2">
       <a  href=".html-admin/Asia.html"  >
-        <img src="../img/mappa zoo/asian_passage.png "  style="width: 160px; margin-left: 620px; margin-top: 280px;">
+        <img src="../static/mappa zoo/asian_passage.png "  style="width: 160px; margin-left: 620px; margin-top: 280px;">
       </a>
     </div>
     <!--foto3, asian -->
     <div id="Layer2" style="position:absolute; left:10px; z-index:2">
       <a  href=".html-admin/Ingresso.html"  >
-        <img src="../img/mappa zoo/verdino.png"  style="width: 150px; margin-left: 497px; margin-top: 330px;">
+        <img src="../static/mappa zoo/verdino.png"  style="width: 150px; margin-left: 497px; margin-top: 330px;">
       </a>
     </div>
    <!--foto4, pleistocene--> 
    <div id="Layer2" style="position:absolute; left:10px; z-index:2">
     <a  href=".html-admin/Desert.html" >
-      <img src="../img/mappa zoo/pleistocene.png" style="width: 255px; margin-left: 465px; margin-top: 35px;">
+      <img src="../static/mappa zoo/pleistocene.png" style="width: 255px; margin-left: 465px; margin-top: 35px;">
     </a>
   </div>
   <!--foto5, grizzly--> 
   <div id="Layer2" style="position:absolute; left:10px; z-index:2">
     <a  href=".html-admin/Desert.html" >
-      <img src="../img/mappa zoo/grizzly_gulch.png" style="width: 160px; margin-left: 690px; margin-top: 30px;">
+      <img src="../static/mappa zoo/grizzly_gulch.png" style="width: 160px; margin-left: 690px; margin-top: 30px;">
     </a>
   </div>
   <!--foto6, fallenforest--> 
   <div id="Layer2" style="position:absolute; left:10px; z-index:2">
     <a  href="lavoratori.html" >
-      <img src="../img/mappa zoo/fallen_forset.png" style="width: 275px; margin-left: 712px; margin-top: 92px;">
+      <img src="../static/mappa zoo/fallen_forset.png" style="width: 275px; margin-left: 712px; margin-top: 92px;">
     </a>
   </div>
 
