--- a/templates/lavoratori.html
+++ b/templates/lavoratori.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="../img/zoo.png" alt="Logo" height="50" class="d-inline-block align-text-top">
+                <img src="../static/zoo.png" alt="Logo" height="50" class="d-inline-block align-text-top">
               </a>
           <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
             <ul class="navbar-nav">
