--- a/templates/edit.html
+++ b/templates/edit.html
@@ -6,28 +6,19 @@
     <title>Edit</title>
 </head>
 <body>
-    <div class="modal-body">
-        <form action="/save" method="post">
-        <div class="input-group input-group-sm mb-3"> <!-- specie-->
-            <span class="input-group-text" id="inputGroup-sizing-sm">Species</span>
-            <input type="text" value="{{animal.getSpecies()}}" name="ASpecies" style="width: 100px;" />
-          </div>
-        
-          <div class="input-group input-group-sm mb-3"> <!--area-->
-            <span class="input-group-text" id="inputGroup-sizing-sm">Area</span>
-            <input type="text" value="{{animal.getArea()}}" name="A_Area" style="width: 100px;" />
-          </div>
+    <form action="/save" method="post">
+        <input type="hidden" name="userId" value="{{ Animal.getID() }}">
 
-          <div class="input-group input-group-sm mb-3"> <!-- peso-->
-            <span class="input-group-text" id="inputGroup-sizing-sm">Animal Weight</span>
-            <input type="text" value="{{animal.getWeight()}}" name="AWeight" style="width: 100px;" />
-          </div>
-        </form>
+        <label >Specie:</label><br>
+        <input type="text" id="Specie_animale"  value="{{ Animal.getSpecies() }}" ><br><br>
 
-        <form action="/animals" method="GET">
-            <button type="button" class="btn btn-success">Save</button>
-            </form>
-            <a href="agg-togli.html"><button type="button" class="btn btn-success">Exit</button></a>
-      </div>
+        <label >Area:</label><br>
+        <input type="text" id="Area_animale"  value="{{ Animal.getArea() }}" ><br><br>
+
+        <label >Peso:</label><br>
+        <input  id="Peso_animale"  value="{{ Animal.getWeight() }}"><br><br>
+
+        <button type="submit">Save</button>
+    </form>
 </body>
 </html>
