--- a/templates/agg-togli.html
+++ b/templates/agg-togli.html
@@ -4,7 +4,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GEstionale Zoo</title>
     <link rel="stylesheet" href="/static/../style.css">
 </head>
 <body>
@@ -54,17 +54,17 @@
           {% for u in dati %}
           <tr>
             <th scope="row">{{u.getId()}} </th>
-            <td>{{u.getArea()}} </td>
-            <td>{{u.getWeight()}} </td>
-            <td>{{u.getSpecies()}} </td>
+            <td>{{u.Species}} </td>
+            <td>{{u.Weight}} </td>
+            <td>{{u.Area()}} </td>
 
             <td>
               <form action="/edit" method="get">
-                <input type="hidden" name="id" value="{{ animale.getID() }}">
+                <input type="hidden" name="id" value="{{ u.ID }}"> <!--mandando di nascosto l'id dell'animale-->
                 <a href="edit.html"><button type="button" class="btn btn-dark">Edit</button></a>
             </form>
             <form action="/delete" method="post">
-              <input type="hidden" name="userId" value="{{ animale.getID() }}">
+              <input type="hidden" name="userId" value="{{ u.ID }}">
               <button class="btn btn-dark" >Elimina</button>
           </form>
             </td> 
