--- a/templates/index.html
+++ b/templates/index.html
@@ -17,13 +17,13 @@
               <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Home</a>
+                      <a class="nav-link" href="/animals">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="lavoratori.html">Working area</a>
+                      <a class="nav-link" href="/utenti">Working area</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="about_us.html">About us</a>
+                      <a class="nav-link" href="/about">About us</a>
                     </li>
                 </ul>
               </div>
@@ -38,42 +38,59 @@
     <div id="Layer1" style="position:absolute; left:10px;  z-index:1">
       <img src="../static/mappa zoo/mappa.png" style="width: 800px; margin-left: 350px;">
     </div> -->
+ 
     <!--foto 1, africa -->
     <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-      <a  href="lavoratori.html" >
+      <a  href=>
         <img src="../static/mappa zoo/africa.png "  style="width: 380px; margin-left: 735px; margin-top: 200px;">
       </a>
     </div>
     <!--foto2, asian -->
     <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-      <a  href=".html-admin/Asia.html"  >
+      <a  href=  >
         <img src="../static/mappa zoo/asian_passage.png "  style="width: 160px; margin-left: 620px; margin-top: 280px;">
       </a>
     </div>
     <!--foto3, asian -->
     <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-      <a  href=".html-admin/Ingresso.html"  >
+      <a  href=""  >
         <img src="../static/mappa zoo/verdino.png"  style="width: 150px; margin-left: 497px; margin-top: 330px;">
       </a>
     </div>
    <!--foto4, pleistocene--> 
    <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-    <a  href=".html-admin/Desert.html" >
+    <a  href="" >
       <img src="../static/mappa zoo/pleistocene.png" style="width: 255px; margin-left: 465px; margin-top: 35px;">
     </a>
   </div>
   <!--foto5, grizzly--> 
   <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-    <a  href=".html-admin/Desert.html" >
+    <a  href="" >
       <img src="../static/mappa zoo/grizzly_gulch.png" style="width: 160px; margin-left: 690px; margin-top: 30px;">
     </a>
   </div>
   <!--foto6, fallenforest--> 
   <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-    <a  href="lavoratori.html" >
+    <a  href="" >
       <img src="../static/mappa zoo/fallen_forset.png" style="width: 275px; margin-left: 712px; margin-top: 92px;">
     </a>
-  </div>
+  </div></div>
+
+  <div class="row g-4" style=" margin-left: 30px;margin-top: 100px;">
+    <div class="col-md-6 col-lg-4">
+        <div class="card text-center">
+            <div class="card-body" style="background-color: beige;">
+                <h5 class="card-title">Animali presenti nel parco</h5>
+                <p class="card-text"><ul>
+                  {% for animal in lista_animals %}
+                    <li>
+                      animal.species, che si trova {{ animal.area }}
+                    </li>
+                    {% endfor %}
+                </ul></p>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
