--- a/templates/add.html
+++ b/templates/add.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color:beige;">
+    <div style="width: 400px; margin-left: 500px;margin-top: 100px;">
     <form action="/new" method="post">
+        <div class="mb-3">
         <label >Specie:</label><br>
-        <input type="text" id="Specie_animale" name="ASpecies" required><br><br>
+        <input type="text" id="Specie_animale" name="ASpecies" required class="form-control"><br><br></div>
 
+        <div class="mb-3">
         <label >Area:</label><br>
-        <input type="text" id="Area_animale" name="A_Area" required><br><br>
+        <input type="text" id="Area_animale" name="A_Area" required class="form-control"><br><br></div>
 
+        <div class="mb-3">
         <label >Peso:</label><br>
-        <input type="number" id="Peso_animale" name="AWeight" required><br><br>
+        <input type="number" id="Peso_animale" name="AWeight" required class="form-control"><br><br></div>
 
-        <button type="submit">Add</button>
-    </form>
+        <button type="submit" class="btn btn-light">Add</button>
+    </form></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
 </html>
