--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,21 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color:beige ;">
+    <div style="width: 400px;margin-left: 500px;margin-top: 100px;">
     <form action="/save" method="post">
         <input type="hidden" name="userId" value="{{ Animal.getID() }}">
 
+        <div class="mb-3">
         <label >Specie:</label><br>
-        <input type="text" id="Specie_animale"  value="{{ Animal.getSpecies() }}" ><br><br>
+        <input type="text" id="Specie_animale"  value="{{ Animal.getSpecies() }}" class="form-control"><br><br></div>
 
+        <div class="mb-3">
         <label >Area:</label><br>
-        <input type="text" id="Area_animale"  value="{{ Animal.getArea() }}" ><br><br>
+        <input type="text" id="Area_animale"  value="{{ Animal.getArea() }}" class="form-control"><br><br></div>
 
+        <div class="mb-3">
         <label >Peso:</label><br>
-        <input  id="Peso_animale"  value="{{ Animal.getWeight() }}"><br><br>
+        <input  id="Peso_animale"  value="{{ Animal.getWeight() }}" class="form-control"><br><br></div>
 
-        <button type="submit">Save</button>
+        <button type="submit" class="btn btn-light">Save</button>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </form>
+    </div>
 </body>
 </html>
