--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
                 <p class="card-text"><ul>
                   {% for animal in lista_animals %}
                     <li>
-                      animal.species, che si trova {{ animal.area }}
+                      {{animal.species}}, che si trova {{ animal.area }}
                     </li>
                     {% endfor %}
                 </ul></p>
