--- a/templates/agg-togli.html
+++ b/templates/agg-togli.html
@@ -23,7 +23,7 @@
                       <form action="/utenti"><a class="nav-link" href="lavoratori.html">Working area</a></form>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/about">About us</a>
+                      <a class="nav-link" href="about_us.html">About us</a>
                     </li>
                 </ul>
               </div>
