--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -12,7 +12,7 @@
     <div> <!--Inizio Nav-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="../static/zoo.png" alt="Logo" height="50" class="d-inline-block align-text-top">
                   </a>
               <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
