--- a/templates/index.html
+++ b/templates/index.html
@@ -17,13 +17,13 @@
               <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="/animals">Home</a>
+                      <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/utenti">Working area</a>
+                      <a class="nav-link" href="lavoratori.html">Working area</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/about">About us</a>
+                      <a class="nav-link" href="about_us.html">About us</a>
                     </li>
                 </ul>
               </div>
@@ -41,13 +41,13 @@
  
     <!--foto 1, africa -->
     <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-      <a  href=>
+      <a  >
         <img src="../static/mappa zoo/africa.png "  style="width: 380px; margin-left: 735px; margin-top: 200px;">
       </a>
     </div>
     <!--foto2, asian -->
     <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-      <a  href=  >
+      <a >
         <img src="../static/mappa zoo/asian_passage.png "  style="width: 160px; margin-left: 620px; margin-top: 280px;">
       </a>
     </div>
@@ -59,19 +59,19 @@
     </div>
    <!--foto4, pleistocene--> 
    <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-    <a  href="" >
+    <a  >
       <img src="../static/mappa zoo/pleistocene.png" style="width: 255px; margin-left: 465px; margin-top: 35px;">
     </a>
   </div>
   <!--foto5, grizzly--> 
   <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-    <a  href="" >
+    <a >
       <img src="../static/mappa zoo/grizzly_gulch.png" style="width: 160px; margin-left: 690px; margin-top: 30px;">
     </a>
   </div>
   <!--foto6, fallenforest--> 
   <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-    <a  href="" >
+    <a   >
       <img src="../static/mappa zoo/fallen_forset.png" style="width: 275px; margin-left: 712px; margin-top: 92px;">
     </a>
   </div></div>
