cambio nav e parte del py

--- a/templates/lavoratori.html
+++ b/templates/lavoratori.html
@@ -21,10 +21,10 @@
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="lavoratori.html">Working area</a>
+                  <a class="nav-link" href="/utenti">Working area</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about_us.html">About us</a>
+                  <a class="nav-link" href="/about">About us</a>
                 </li>
             </ul>
           </div>
