--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -8,11 +8,11 @@
 
 </head>
 <body style="background-color: #4C5F28;">
-
+    <div><a href="about">About</a></div>
     <div> <!--Inizio Nav-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="#">
                     <img src="../static/zoo.png" alt="Logo" height="50" class="d-inline-block align-text-top">
                   </a>
               <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
@@ -21,10 +21,10 @@
                       <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="lavoratori.html">Working area</a>
+                      <a class="nav-link" href="/utenti">Working area</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="about_us.html">About us</a>
+                      <a class="nav-link" href="/about">About us</a>
                     </li>
                 </ul>
               </div>
