--- a/templates/agg-togli.html
+++ b/templates/agg-togli.html
@@ -8,29 +8,28 @@
     <link rel="stylesheet" href="/static/../style.css">
 </head>
 <body>
-    <div> <!--Inizio Nav-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="../static/zoo.png" alt="Logo" height="50" class="d-inline-block align-text-top">
-                  </a>
-              <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <form action="/utenti"><a class="nav-link" href="lavoratori.html">Working area</a></form>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="about_us.html">About us</a>
-                    </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </div> <!--Fine Nav bar -->
-
+  <div> <!--Inizio Nav-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="../static/zoo.png" alt="Logo" height="50" class="d-inline-block align-text-top">
+              </a>
+          <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/utenti">Working area</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/about">About us</a>
+                </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+</div> <!--Fine Nav bar -->
 
     <div style="width: 600px; margin-left: 450px; margin-top: 100px;">
 
